# Proyecto-PG

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
Shaders/: default.frag  default.vert
